	* ext/socket/lib/socket.rb (BasicSocket#recv_nonblock):
	  new wrapper for private method, move RDoc
	  (Socket#recvfrom_nonblock): ditto
	  (UDPSocket#recvfrom_nonblock): ditto

Mon Nov 16 21:27:54 2015  Naohisa Goto  <ngotogenome@gmail.com>

	* test/dtrace/helper.rb (Dtrace::TestCase#trap_probe): dtrace buffer
	  size is set as 8m on Solaris (default 4m). [Bug #11697]

Mon Nov 16 18:21:52 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* object.c (rb_obj_dig): dig in nested structs too.

	* struct.c (rb_struct_dig): new method Struct#dig.
	  [Feature #11688]

Mon Nov 16 17:41:33 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_peephole_optimize): optimize tail calls on aref
	  and aset specialized instructions.

	* compile.c (iseq_peephole_optimize): optimize replaced leave
	  instruction copied to jump instruction too.

Mon Nov 16 16:39:38 2015  Akinori MUSHA  <knu@iDaemons.org>

	* lib/set.rb: Enable frozen_string_literal.

	* lib/set.rb: Move << out of the begin block that ensures pop.

Mon Nov 16 16:28:30 2015  Akinori MUSHA  <knu@iDaemons.org>

	* lib/set.rb (Hash#flatten!, #add?, #delete?, #collect!, #reject!,
	  #select!, #^, #classify): Micro-optimize some methods for
	  performance and readability.

Mon Nov 16 16:17:58 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* ChangeLog: fixed accidentally commit.

Mon Nov 16 16:10:51 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* mkconfig.rb: Add some high-level documentation.
	  [ci skip][fix GH-1081] Patch by @ulfalizer

Mon Nov 16 15:59:14 2015  yui-knk  <spiketeika@gmail.com>

	* proc.c: Add call-seq of `Method#super_method`
	  [ci skip][fix GH-1094]

Mon Nov 16 15:58:39 2015  Kenichi Kamiya  <kachick1@gmail.com>

	* struct.c: Standardize a method signature of Struct#[]=.
	  [ci skip][fix GH-1095]

Mon Nov 16 15:42:36 2015  Akinori MUSHA  <knu@iDaemons.org>

	* lib/set.rb (#>=, #>, #<=, #<): Make use of Hash#>=, #>, #<, and
	  #<= when comparing against an instance of the same kind.
